--- a/entity/src/main/java/dev/ikm/tinkar/coordinate/adoc/05-navigation-coordinates.adoc
+++ b/entity/src/main/java/dev/ikm/tinkar/coordinate/adoc/05-navigation-coordinates.adoc
@@ -1,5 +1,10 @@
 = Navigation Coordinates
 
+[NOTE]
+====
+This document describes the IKE Coordinate System (Integrated Knowledge Ecosystem), based on the HL7 TINKAR specification. Technical references use "Tinkar" in code for backward compatibility.
+====
+
 == Overview
 
 Navigation coordinates specify how to construct and traverse directed graphs over concepts. They control:
