--- a/entity/src/main/java/dev/ikm/tinkar/coordinate/adoc/06-edit-coordinates.adoc
+++ b/entity/src/main/java/dev/ikm/tinkar/coordinate/adoc/06-edit-coordinates.adoc
@@ -1,5 +1,10 @@
 = Edit Coordinates
 
+[NOTE]
+====
+This document describes the IKE Coordinate System (Integrated Knowledge Ecosystem), based on the HL7 TINKAR specification. Technical references use "Tinkar" in code for backward compatibility.
+====
+
 == Overview
 
 Edit coordinates specify metadata for creating and modifying knowledge content. They control:
