--- a/entity/src/main/java/dev/ikm/tinkar/coordinate/adoc/10-reference.adoc
+++ b/entity/src/main/java/dev/ikm/tinkar/coordinate/adoc/10-reference.adoc
@@ -1,5 +1,10 @@
 = Quick Reference
 
+[NOTE]
+====
+This document describes the IKE Coordinate System (Integrated Knowledge Ecosystem), based on the HL7 TINKAR specification. Technical references use "Tinkar" in code for backward compatibility.
+====
+
 == Overview
 
 This reference provides quick lookup for common coordinate operations, factory methods, and key interfaces.
